[package]
name = "rusty_redis"
version = "0.1.0"
edition = "2024"
description = "A Rusty Redis client"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#serial_test = { version = "3.0", features = ["tokio"] }
# resp_protocol={path='/src/resp_protocol'}
